# WilliamShakespeare-Rust

./: .env  .gitignore  Cargo.toml  README.md  Settings.toml
src/: main.rs
src/commands/: botinfo.rs  embed.rs  gay.rs  hello.rs  help.rs  info.rs  iq.rs  loggingtest.rs  mod.rs  pp.rs  say.rs  serverinfo.rs
