[package]
name = "william_shakespeare_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
rand = "0.8.5"
