[package]
name = "william_shakespeare"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
config-file = "0.2.3"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
poise = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.204"
tokio = { version = "1.39.2", features = ["rt-multi-thread"]}
